Add a special ui-label unsure to come back to entries, closes #45
