# docs/openapi.yaml
@@ -512,6 +512,28 @@ paths:
                 type: string
                 format: binary
           description: ''
+  /v1/studies/{id}/postponed/:
+    get:
+      operationId: v1_studies_postponed_retrieve
+      parameters:
+      - in: path
+        name: id
+        schema:
+          type: string
+          format: uuid
+        description: A UUID string identifying this study.
+        required: true
+      tags:
+      - Study
+      security:
+      - cookieAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Postponed'
+          description: ''
 components:
   schemas:
     BlankEnum:
@@ -649,7 +671,7 @@ components:
     NullEnum:
       enum:
       - null
-    OvertimeEnum:
+    PostponeEnum:
       enum:
       - left
       - right
@@ -661,6 +683,15 @@ components:
         * `right` - right
         * `up` - up
         * `down` - down
+    Postponed:
+      type: object
+      properties:
+        images:
+          type: array
+          items:
+            type: integer
+      required:
+      - images
     Solution:
       type: object
       properties:
@@ -803,7 +834,7 @@ components:
           maxLength: 200
         labels:
           $ref: '#/components/schemas/UiLabel'
-        overtime:
+        postpone:
           nullable: true
           description: |-
             (optional) The direction to mark images for another round of classification.
@@ -813,7 +844,7 @@ components:
             * `up` - up
             * `down` - down
           oneOf:
-          - $ref: '#/components/schemas/OvertimeEnum'
+          - $ref: '#/components/schemas/PostponeEnum'
           - $ref: '#/components/schemas/BlankEnum'
           - $ref: '#/components/schemas/NullEnum'
       required:
